Change img path

--- a/src/scss/page/_landing.scss
+++ b/src/scss/page/_landing.scss
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-image: url("/src/assets/img/landing-img.jpg");
+    background-image: url("/img/landing-img.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
