--- a/src/scss/page/_landing.scss
+++ b/src/scss/page/_landing.scss
@@ -63,6 +63,7 @@
     justify-content: center;
 
     &--project {
+      margin-top: 40px;
       align-items: center;
       gap: 10px;
       flex-wrap: wrap;
