--- a/src/scss/base/_font-family.scss
+++ b/src/scss/base/_font-family.scss
@@ -1,3 +1,4 @@
 $Raleway: "Raleway", Arial, Helvetica, sans-serif;
 $Roboto: "Roboto", Arial, Helvetica, sans-serif;
 $Monter: "Montserrat", Arial, Helvetica, sans-serif;
+$Poppins: "Poppins", sans-serif;
