--- a/src/scss/elements/_global.scss
+++ b/src/scss/elements/_global.scss
@@ -2,7 +2,7 @@
 @use "../base/colors" as color;
 
 html {
-  font-family: ff.$Raleway;
+  font-family: ff.$Poppins;
   font-size: 10px;
   scroll-behavior: smooth;
   color: color.$white;
